fix(security+a11y+perf): address 250 @claude review findings on PR #2
- Security: XSS escaping in OAuth callbacks, CSRF state validation, admin session checks, input validation limits, model allowlist, role-prefix stripping
- Auth: remove dev bypass, atomic session writes, TRUSTED_PROXY validation, deduplicate getClientIp, rename conflicting validateAdminSession
- OAuth: move CLIENT_SECRET to env var, redirectUri allowlist, required state parameter
- A11y: modal focus trap, aria-live regions, icon button labels, main landmark, prefers-reduced-motion, aria-sort on tables
- Perf: extract CountdownTimer component, search debounce, metrics caching, stats in-memory cache
- Architecture: ensureInitialized() race condition fix, cache stampede prevention, true streaming support
- Config: security headers (CSP, HSTS, X-Frame-Options), noUncheckedIndexedAccess, engines field, dotenvx to deps
- Tests: 50 new tests across 7 files, coverage config added
- Utils: escapeHtml(), useRef refactor, navItems dedup, namespace removal, Map cleanup

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-# Suppress url.parse() deprecation warnings from dependencies
-# This is a temporary measure until all dependencies update to WHATWG URL API
-node-options=--no-deprecation
+# node-options=--no-deprecation was removed; url.parse() deprecation warnings
+# are now surfaced to track dependency update progress
