--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "types": ["vitest/globals"],
+    "noUncheckedIndexedAccess": true,
     "incremental": true,
     "allowImportingTsExtensions": true,
     "plugins": [
